@@ -1,0 +1,10 @@
+(:aead-test #h"" #h"6bfb914fd07eae6b" #h"" #h"e037830e8389f27b025a2d6527e79d01" :aes #h"233952dee4d5ed5f9b9c6d6ff80ff478" #h"62ec67f9c3a4a407fcb2a8c49031a8b3")
+(:aead-test #h"f7fb" #h"fa3bfd4806eb53fa" #h"19dd" #h"5c4c9331049d0bdab0277408f67967e5" :aes #h"91945d3f4dcbee0bf45ef52255f095a4" #h"becaf043b0a23d843194ba972c66debd")
+(:aead-test #h"1a47cb4933" #h"234a3463c1264ac6" #h"d851d5bae0" #h"3a59f238a23e39199dc9266626c40f80" :aes #h"01f74ad64077f2e704c0f60ada3dd523" #h"70c3db4f0d26368400a10ed05d2bff5e")
+(:aead-test #h"481c9e39b1" #h"33cce2eabff5a79d" #h"632a9d131a" #h"d4c168a4225d8e1ff755939974a7bede" :aes #h"d07cf6cbb7f313bdde66b727afd3c5e8" #h"8408dfff3c1a2b1292dc199e46b7d617")
+(:aead-test #h"40d0c07da5e4" #h"aeb96eaebe2970e9" #h"071dfe16c675" #h"cb0677e536f73afe6a14b74ee49844dd" :aes #h"35b6d0580005bbc12b0587124557d2c2" #h"fdb6b06676eedc5c61d74276e1f8e816")
+(:aead-test #h"4de3b35c3fc039245bd1fb7d" #h"d4482d1ca78dce0f" #h"835bb4f15d743e350e728414" #h"abb8644fd6ccb86947c5e10590210a4f" :aes #h"bd8e6e11475e60b268784c38c62feb22" #h"6eac5c93072d8e8513f750935e46da1b")
+(:aead-test #h"8b0a79306c9ce7ed99dae4f87f8dd61636" #h"65d2017990d62528" #h"02083e3979da014812f59f11d52630da30" #h"137327d10649b0aa6e1c181db617d7f2" :aes #h"7c77d6e813bed5ac98baa417477a2e7d" #h"1a8c98dcd73d38393b2bf1569deefc19")
+(:aead-test #h"1bda122bce8a8dbaf1877d962b8592dd2d56" #h"54b9f04e6a09189a" #h"2ec47b2c4954a489afc7ba4897edcdae8cc3" #h"3b60450599bd02c96382902aef7f832a" :aes #h"5fff20cafab119ca2fc73549e20f5b0d" #h"dde59b97d722156d4d9aff2bc7559826")
+(:aead-test #h"6cf36720872b8513f6eab1a8a44438d5ef11" #h"899a175897561d7e" #h"0de18fd0fdd91e7af19f1d8ee8733938b1e8" #h"e7f6d2231618102fdb7fe55ff1991700" :aes #h"a4a4782bcffd3ec5e7ef6d8c34a56123" #h"b781fcf2f75fa5a8de97a9ca48e522ec")
+(:aead-test #h"ca40d7446e545ffaed3bd12a740a659ffbbb3ceab7" #h"126735fcc320d25a" #h"cb8920f87a6c75cff39627b56e3ed197c552d295a7" #h"cfc46afc253b4652b1af3795b124ab6e" :aes #h"8395fcf1e95bebd697bd010bc766aac3" #h"22e7add93cfc6393c57ec0b3c17d6b44")
